--- a/pom.xml
+++ b/pom.xml
@@ -1,81 +1,77 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
-<groupId>com.gestionincidencias</groupId>
-<artifactId>GestionIncidencias</artifactId>
-<version>1.0-SNAPSHOT</version>
-<packaging>war</packaging>
-<properties>
-<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<maven.compiler.source>1.8</maven.compiler.source>
-<maven.compiler.target>1.8</maven.compiler.target>
-<failOnMissingWebXml>false</failOnMissingWebXml>
-</properties>
-<dependencies>
-<!--  Java EE 8 Web Profile  -->
-<dependency>
-<groupId>javax</groupId>
-<artifactId>javaee-web-api</artifactId>
-<version>8.0</version>
-<scope>provided</scope>
-</dependency>
-<!--  JSTL  -->
-<dependency>
-<groupId>javax.servlet</groupId>
-<artifactId>jstl</artifactId>
-<version>1.2</version>
-</dependency>
-<!--  MySQL Connector  -->
-<dependency>
-<groupId>mysql</groupId>
-<artifactId>mysql-connector-java</artifactId>
-<version>8.0.33</version>
-</dependency>
-<!--  GSON  -->
-<dependency>
-<groupId>com.google.code.gson</groupId>
-<artifactId>gson</artifactId>
-<version>2.10.1</version>
-</dependency>
-</dependencies>
-<build>
-<finalName>GestionIncidencias</finalName>
-<plugins>
-<!--  Compilador Java  -->
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-compiler-plugin</artifactId>
-<version>3.8.1</version>
-<configuration>
-<source>1.8</source>
-<target>1.8</target>
-</configuration>
-</plugin>
-<!--  WAR Plugin  -->
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-war-plugin</artifactId>
-<version>3.2.3</version>
-<configuration>
-<failOnMissingWebXml>false</failOnMissingWebXml>
-</configuration>
-</plugin>
-<!--  Plugin de limpieza (evita archivos bloqueados)  -->
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-clean-plugin</artifactId>
-<version>3.2.0</version>
-<configuration>
-<filesets>
-<fileset>
-<directory>${project.build.directory}</directory>
-<includes>
-<include>**/*</include>
-</includes>
-</fileset>
-</filesets>
-</configuration>
-</plugin>
-</plugins>
-</build>
-<name>GestionIncidencias</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.gestionincidencias</groupId>
+    <artifactId>GestionIncidencias</artifactId>
+    <version>1.0</version>
+
+    <!-- Fuerza el nombre EXACTO del WAR -->
+    <packaging>war</packaging>
+    <build>
+        <finalName>GestionIncidencias</finalName>
+
+        <plugins>
+            <!-- Compilador Java -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <!-- Empaquetado WAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+
+        <!-- Java EE -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- JSTL -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- MySQL Connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
+        <!-- GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
+
+    </dependencies>
+
+    <name>GestionIncidencias</name>
+
 </project>
